# stopdb

./: .env.sample  .gitignore  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
data/: README.md  districts.csv  incidents.csv  reports.csv  schools.csv
data/aug16/: districts.csv  incidents.csv  schools.csv
scripts/: reconstitute.sh  squashmigrations.sh  updatedeps.sh
server/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
server/incidents/: admin.py  apps.py  fields.py  kebab.py  models.py  urls.py  views.py
server/incidents/management/commands/: import_data.py  load_exports.py
server/incidents/migrations/: 0001_initial.py
server/templates/: index.html
